Wrap up dot-iframe-dialog and wrapper and fix tests

--- a/src/app/view/components/dot-dialog/dot-dialog.component.scss
+++ b/src/app/view/components/dot-dialog/dot-dialog.component.scss
@@ -15,7 +15,7 @@ $dialog-padding: $basic-padding * 4;
         position: absolute;
         right: 0;
         top: 0;
-        z-index: 1001;
+        z-index: 1000;
     }
 }
 
